# Rustyfridge

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  build.sh  rakefile.rb  test.sh  thumbv7m-none-eabi.json
.cargo/: config
binaries/: rustyfridge-0.0.1.elf  rustyfridge-0.0.2.elf
src/: filter.rs  fridge.rs  main.rs  test.rs
support/t32/: attach.cmm  config.t32  erase.cmm  flash_elf_file.cmm  flash_last.cmm  load_symbols.cmm  main.cmm  menu.cmm  reset.cmm  selectFile.cmm  t32.sh  window.cmm  write_checksum.cmm
