[package]
name = "rustyfridge"
version = "0.0.2"
authors = ["Felix Obenhuber <felix@obenhuber.de>"]

[features]
mcu_lpc17xx = ["zinc/mcu_lpc17xx"]
test = ["zinc/test"]

[dependencies]
macro_platformtree = { path = "../zinc/macro_platformtree" }
zinc = { path =  "../zinc" }

[target.thumbv7m-none-eabi.dependencies]
rust-libcore = "*"
