[package]
name = "rustyfridge"
version = "0.0.2"
authors = ["Felix Obenhuber <felix@obenhuber.de>"]

[dependencies.zinc]
git = "https://github.com/hackndev/zinc.git"
features = ["mcu_lpc17xx"]

[dependencies.macro_platformtree]
git = "https://github.com/hackndev/zinc.git"
path = "macro_platformtree"

[dependencies.ioreg]
git = "https://github.com/hackndev/zinc.git"
path = "ioreg"

[dependencies.platformtree]
git = "https://github.com/hackndev/zinc.git"
path = "platformtree"

[dependencies.rust-libcore]
version = "*"

[[bin]]
name = "rustyfridge"
